<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent" android:clickable="true">


    <TextView
        android:id="@+id/highscore_item_score"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:gravity="center"
        android:text="@string/score"
        android:textSize="@dimen/text"
        android:paddingLeft="30dp"
        android:foregroundGravity="center"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true" />

    <TextView
        android:id="@+id/highscore_item_field"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:text="@string/fieldSize"
        android:textSize="@dimen/text"
        android:paddingLeft="105dp"
        android:foregroundGravity="center"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true" />

    <TextView
        android:id="@+id/highscore_item_mines"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:text="@string/mines"
        android:textSize="@dimen/text"
        android:paddingLeft="170dp"
        android:foregroundGravity="center"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true" />

    <TextView
        android:id="@+id/highscore_item_name"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:text="@string/name"
        android:textSize="@dimen/text"
        android:paddingLeft="235dp"
        android:foregroundGravity="center"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"/>

</RelativeLayout>