<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent" android:clickable="true">



    <TextView
        android:id="@+id/highscore_item_position"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:textIsSelectable="false"
        android:text="@string/savegame_header_id"/>

    <TextView
        android:id="@+id/highscore_item_score"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:gravity="center"
        android:textSize="@dimen/text"
        android:paddingLeft="40dp"
        android:foregroundGravity="center"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:textIsSelectable="false"
        android:text="@string/savegame_header_time"/>

    <TextView
        android:id="@+id/highscore_item_field"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:textSize="@dimen/text"
        android:paddingLeft="120dp"
        android:foregroundGravity="center"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:textIsSelectable="false"
        android:text="@string/savegame_header_mines"/>

    <TextView
        android:id="@+id/highscore_item_name"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:textSize="@dimen/text"
        android:paddingLeft="210dp"
        android:foregroundGravity="center"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:textIsSelectable="false"
        android:text="@string/savegame_header_uncovered"/>
</RelativeLayout>